// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TogglerItem should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.5rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 0.9rem;
  font-weight: 500;
  color: #10ADE4;
  background-color: #FFF;
  cursor: pointer;
  text-transform: uppercase;
}

<TogglerItem
  selected={false}
>
  <styled.div
    data-e2e="defaultTogglerItem"
    selected={false}
  >
    <div
      className="c0"
      data-e2e="defaultTogglerItem"
      selected={false}
    >
      TogglerItem
    </div>
  </styled.div>
</TogglerItem>
`;

exports[`TogglerItem should render correctly with selected 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.5rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 0.9rem;
  font-weight: 500;
  color: #FFF;
  background-color: #10ADE4;
  cursor: pointer;
  text-transform: uppercase;
}

<TogglerItem
  selected={true}
>
  <styled.div
    data-e2e="defaultTogglerItem"
    selected={true}
  >
    <div
      className="c0"
      data-e2e="defaultTogglerItem"
      selected={true}
    >
      TogglerItem
    </div>
  </styled.div>
</TogglerItem>
`;
